--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
   ],
   "version": "0.0.8",
   "private": false,
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/OnCircle/roip-conf.git"
+  },
   "dependencies": {
     "jsonminify": "0.2.3",
     "nconf": "0.7.1",
