--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "authors": [
     "OnCircle Inc. <developer@oncircle.com>"
   ],
-  "version": "0.0.12",
+  "version": "0.0.13",
   "private": false,
   "repository": {
     "type": "git",
@@ -17,7 +17,7 @@
   "main": "roip-conf.js",
   "scripts": {
     "test": "./node_modules/grunt-cli/bin/grunt test",
-    "install": "./node_modules/coffee-script/bin/coffee -c roip-conf.coffee"
+    "install": "coffee -c ."
   },
   "readme": "README.md",
   "engines": {
