--- a/package.json
+++ b/package.json
@@ -3,21 +3,21 @@
   "authors": [
     "OnCircle Inc. <developer@oncircle.com>"
   ],
-  "version": "0.0.13",
+  "version": "0.0.14",
   "private": false,
   "repository": {
     "type": "git",
     "url": "https://github.com/OnCircle/roip-conf.git"
   },
   "dependencies": {
-    "coffee-script": "^1.10.0",
+    "coffee-script": "*",
     "jsonminify": "0.2.3",
     "nconf": "0.7.1"
   },
   "main": "roip-conf.js",
   "scripts": {
     "test": "./node_modules/grunt-cli/bin/grunt test",
-    "install": "coffee -c ."
+    "install": "./node_modules/.bin/coffee -c ."
   },
   "readme": "README.md",
   "engines": {
