Removed dep on coffee

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   },
   "main": "roip-conf.js",
   "scripts": {
-    "test": "./node_modules/grunt-cli/bin/grunt test",
+    "test": "grunt test",
     "prepublish": "coffee -c *.coffee"
   },
   "readme": "README.md",
